syntax = "proto3";

package com.road.yishi.proto.active;

message AchieveTotalPointInfoMsg {
  int32 totalPoint = 1;
  repeated int32 pointInfo = 2;
}
